--- a/Test/Test shopping mall main/login_style.css
+++ b/Test/Test shopping mall main/login_style.css
@@ -40,11 +40,12 @@ a {
     border-radius: 10px;
 }
 
-.adv {
+.login {
     text-align: center;
-    font-size: 20px;
-    padding: 12px 8px;
-    margin-left: 100px;
-    margin-right: 100px;
-    color: rgba(255, 255, 255, 0.555);
+    margin-top: 100px;
+}
+
+.login input {
+    padding: 8px;
+    margin: 10px;
 }
