--- a/WishList/LEE.css
+++ b/WishList/LEE.css
@@ -95,12 +95,23 @@ a {
 
 .items {
     text-align: center;
-    margin-top: 150px;
+    margin: 150px 200px 0px 200px;
 }
 
-.items ul li {
-    display: inline;
+.items li {
+    display: inline-block;
     list-style: none;
-    padding: 10px;
-    padding-bottom: 100px;
+    padding: 0px 10px 50px 10px;
+}
+
+.items a {
+    font-size: 20px;
+    display: block;
+}
+
+
+.items a:hover {
+    font-size: 20px;
+    color: var(--accent-color);
+    display: block;
 }
