210212 : added tail on main page

--- a/WishList/LEE.css
+++ b/WishList/LEE.css
@@ -114,3 +114,10 @@ a {
     color: var(--accent-color);
     display: block;
 }
+
+.tail {
+    text-align: center;
+    font-size: 12px;
+    background-color: var(--background-color);
+    padding: 10px;
+}
