--- a/WishList/main_style.css
+++ b/WishList/main_style.css
@@ -84,3 +84,10 @@ a {
 .member.active {
     display: flex;
 }
+
+.tail {
+    text-align: center;
+    font-size: 12px;
+    background-color: var(--background-color);
+    padding: 10px;
+}
