--- a/WishList/main_style.css
+++ b/WishList/main_style.css
@@ -85,6 +85,20 @@ a {
     display: flex;
 }
 
+.detail {
+    text-align: center;
+}
+
+.detail a {
+    display: inline-block;
+    font-size: 25px;
+}
+
+.detail p {
+    display: block;
+    font-size: 16px;
+}
+
 .tail {
     text-align: center;
     font-size: 12px;
